# cs1680-final-tdelv-sreshtaa

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  proposal.md
data/text/: goodbye_friend.txt
proto/: snowcast.proto
src/: connection.rs  lib.rs  message.rs
src/server/: client.rs  mod.rs  station.rs
src/util/: iter_mem.rs  macros.rs  mod.rs  result.rs
