[package]
name = "final-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
byteorder = "1"
async-broadcast = "0.3"
futures-lite = "1.12"
itertools = "0.10"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "snowcast_listener"
path = "src/bin/listener.rs"

[[bin]]
name = "snowcast_control"
path = "src/bin/control.rs"

[[bin]]
name = "snowcast_server"
path = "src/bin/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/bin/helloworld-server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/bin/helloworld-client.rs"
